# stringcare

./: .gitignore  .packages  .pubignore  CHANGELOG.md  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_config_subset
.github/workflows/: push_check_analyze.yml  push_check_publish_dry_run.yml  push_check_test.yml  tag_version_and_publish.yml
android/: CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lang/: en.json  es.json  es_AR.json  es_ES.json  es_US.json
example/lang_base/: es.json  es_ES.json  es_US.json
example/lang_test/: en.json  es_AR.json
example/lib/: main.dart  presenter.dart  r.dart  textVariables.dart  vars.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
ios/: stringcare.podspec
ios/Classes/: StringcarePlugin.h  StringcarePlugin.m  SwiftStringcarePlugin.swift  stringcare.cpp
lib/: stringcare.dart  stringcare_web.dart
linux/: CMakeLists.txt  stringcare_plugin.cc
macos/: stringcare.podspec
macos/Classes/: StringcarePlugin.swift
test/: stringcare_test.dart
windows/: CMakeLists.txt  stringcare_plugin.cpp
windows/include/stringcare/: stringcare_plugin.h
(+33 files in other folders)
